// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`image upload renders properly with image details 1`] = `
<DocumentFragment>
  <div
    class="d-none"
  >
    <label
      class="form-label"
      for="image-select-input"
    >
      Select an image
    </label>
    <input
      class="form-control"
      id="image-select-input"
      type="file"
    />
  </div>
  <img
    alt=""
    class="w-100 mb-3"
    src="src"
  />
  <div
    class="d-flex justify-content-between align-items-center"
  >
    <span
      class="text-muted small mt-1"
      data-testid="upload-dimensions"
    >
      2 x 1
    </span>
    <button
      class="btn btn-sm btn-link text-danger"
      data-testid="remove-upload"
    >
      Remove
    </button>
  </div>
</DocumentFragment>
`;

exports[`image upload renders properly without image details 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <label
      class="form-label"
      for="image-select-input"
    >
      Select an image
    </label>
    <input
      class="form-control"
      id="image-select-input"
      type="file"
    />
  </div>
  <img
    alt=""
    class="w-100 d-none"
  />
</DocumentFragment>
`;
